.provarCaches/00D410000011HE0EAM/objects/rstk__soopertask__c.object
<CustomObject>
    <description>soopertask__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soopertask_rtroutoper__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__soopertask_taskid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the formula for determining the External ID of this record, which is not used or shown on any Rootstock pages</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>Text(rstk__soopertask_rtroutoper__r.rstk__sortoper_oper__c) &amp; &apos;_&apos; &amp;  rstk__soopertask_taskid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soopertask_assignto__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Mfg User to which this task is assigned.</inlineHelpText>
        <label>Assign To User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Configured SO Labor Operation Tasks</relationshipLabel>
        <relationshipName>syusrSoopertasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soopertask_attachsourceid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Attachment Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soopertask_desc__c</fullName>
        <inlineHelpText>The user-defined description for this task.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soopertask_notesourceid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Note Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soopertask_rtroutoper__c</fullName>
        <inlineHelpText>This is the Labor routing operation for which this task is defined.</inlineHelpText>
        <label>CSO Labor Operation</label>
        <referenceTo>rstk__sortoper__c</referenceTo>
        <relationshipLabel>Configured SO Labor Operation Tasks</relationshipLabel>
        <relationshipName>soopertasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soopertask_taskid__c</fullName>
        <inlineHelpText>The user-assigned ID that represents this task.</inlineHelpText>
        <label>Task ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Configured SO Labor Operation Tasks</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configured SO Labor Operation Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>